Open project to MainMap Level
That's it.

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1390,17 +1390,18 @@ StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
 UserDefinedEnum.Description=True
 UserDefinedEnum.Enumerators=True
+UMGEditorProjectSettings.Designer =True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1419,9 +1420,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Stations/CBP_Station_Conveyor.CBP_Station_Conveyor
-OpenAssetsAtExit=/Game/Stations/BP_Station.BP_Station
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1449,7 +1447,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Main/Enums
+ContentBrowserTab1.SelectedPaths=/Game/Map
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1512,13 +1510,13 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Main/Enums/E_StationDirections
-MRUItem1=/Game/Stations/CBP_Station_Packer
-MRUItem2=/Game/Stations/CBP_Station_Cutter
-MRUItem3=/Game/Stations/CBP_Station_Baker
-MRUItem4=/Game/UI/BP_PlayerUI
-MRUItem5=/Game/Stations/BP_Station
-MRUItem6=/Game/Map/MainMap
+MRUItem0=/Game/Map/MainMap
+MRUItem1=/Game/_Main/Enums/E_StationDirections
+MRUItem2=/Game/Stations/CBP_Station_Packer
+MRUItem3=/Game/Stations/CBP_Station_Cutter
+MRUItem4=/Game/Stations/CBP_Station_Baker
+MRUItem5=/Game/UI/BP_PlayerUI
+MRUItem6=/Game/Stations/BP_Station
 MRUItem7=/Game/Stations/CBP_Station_Conveyor
 MRUItem8=/Game/_Main/Structures/S_Station
 MRUItem9=/Game/TopDown/Input/IMC_Default
