--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1471,7 +1471,7 @@ BP_TopDownGameMode_C.LevelInstance=True
 BP_TopDownController_C.Default=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1498,10 +1498,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Stations/BP_Station.BP_Station
-OpenAssetsAtExit=/Game/Stations/CBP_Station_Conveyor.CBP_Station_Conveyor
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3132,7 +3128,7 @@ AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 bForceCompilationAtStartup=False
-RestoreOpenAssetTabsOnRestart=AlwaysPrompt
+RestoreOpenAssetTabsOnRestart=NeverRestore
 bMonitorContentDirectories=True
 AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
