--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -306,7 +306,7 @@ K2Node_Variable=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.
 EdGraphNode=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
-K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus
 CBP_Station_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 CBP_Station_Baker_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
@@ -1474,8 +1474,8 @@ BP_TopDownController_C.Default=True
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1602,10 +1602,10 @@ PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=(
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem1=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
-MRUItem2=/Game/UI/BP_PlayerUI
-MRUItem3=/Game/Stations/CBP_Station_Conveyor
-MRUItem4=/Game/Stations/BP_Station
+MRUItem1=/Game/UI/BP_PlayerUI
+MRUItem2=/Game/Stations/CBP_Station_Conveyor
+MRUItem3=/Game/Stations/BP_Station
+MRUItem4=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
 MRUItem5=/Game/TopDown/Blueprints/BP_TopDownGameMode
 MRUItem6=/Game/Assets/conveyer_line
 MRUItem7=/Game/Map/MainMap
@@ -3132,7 +3132,7 @@ AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 bForceCompilationAtStartup=False
-RestoreOpenAssetTabsOnRestart=AlwaysPrompt
+RestoreOpenAssetTabsOnRestart=AlwaysRestore
 bMonitorContentDirectories=True
 AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
