updated models and UVs + texture for conveyors

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -313,7 +313,7 @@ CBP_Station_Baker_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrap
 CBP_Station_Cutter_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 CBP_Station_Packer_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
-MeshNaniteSettings=
+MeshNaniteSettings=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
 SceneComponent=
 BP_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 StaticMeshActor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
@@ -324,7 +324,7 @@ LastLevel=/Game/Map/MainMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
+Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -550,6 +550,11 @@ MaterialExpressionTextureCoordinate="\"Object\" "
 MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionAppendVector="\"Object\" "
 MaterialExpressionPanner="\"Object\" "
+MaterialExpressionFunctionOutput="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+MaterialExpressionDoubleVectorParameter="\"Object\" "
+MaterialExpressionConstant2Vector="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1581,11 +1586,31 @@ BP_PlaceableObject_C.WorldPartition=True
 BP_PlaceableObject_C.Events=True
 BP_PlaceableObject_C.TransformCommon=True
 BP_PlaceableObject_C.Networking=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+MaterialExpressionDoubleVectorParameter.General=True
+MaterialExpressionDoubleVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionDoubleVectorParameter.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
@@ -1609,13 +1634,9 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/Goods/BP_Goods.BP_Goods
-OpenAssetsAtExit=/Game/Stations/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor
-OpenAssetsAtExit=/Game/Stations/BP_PlaceableObject.BP_PlaceableObject
 OpenAssetsAtExit=/Game/Materials/M_Conveyor.M_Conveyor
-OpenAssetsAtExit=/Game/Assets/conveyer_line.conveyer_line
+OpenAssetsAtExit=/Game/Assets/conveyer_L.conveyer_L
+OpenAssetsAtExit=/Game/Assets/conveyer_T.conveyer_T
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1715,32 +1736,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/conveyer_line
-MRUItem1=/Game/Materials/M_Conveyor
-MRUItem2=/Game/Materials/MI_Conveyor
-MRUItem3=/Game/Stations/BP_PlaceableObject
-MRUItem4=/Game/Stations/CBP_PlaceableObject_Conveyor
-MRUItem5=/Game/UI/BP_PlayerUI
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem7=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
-MRUItem8=/Game/TopDown/Input/IMC_Default
-MRUItem9=/Game/Goods/BP_Goods
-MRUItem10=/Game/Assets/io_bakedCookies
-MRUItem11=/Game/Assets/io_loadedDough
-MRUItem12=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem13=/Game/Map/MainMap
-MRUItem14=/Game/_Main/Structures/S_Station
-MRUItem15=/Game/TopDown/Input/Actions/IA_LeftMouseClick
-MRUItem16=/Game/Stations/BP_Output
-MRUItem17=/Game/Stations/BP_Intake
-MRUItem18=/Game/Materials/MI_SolidDarkGreen
-MRUItem19=/Game/Materials/MI_SolidRed
-MRUItem20=/Game/Materials/MI_Solid_Start
-MRUItem21=/Game/Materials/MI_Solid_End
-MRUItem22=/Game/Materials/MI_SolidOrange
-MRUItem23=/Game/Materials/MI_SolidYellow
-MRUItem24=/Game/Materials/MI_SolidGray
-MRUItem25=/Game/Materials/MI_SolidBlack
+MRUItem0=/Game/Materials/M_Conveyor
+MRUItem1=/Game/Assets/conveyer_T
+MRUItem2=/Game/Assets/conveyer_L
+MRUItem3=/Game/Assets/darker_gray
+MRUItem4=/Game/Assets/conveyer_line
+MRUItem5=/Engine/Functions/Engine_MaterialFunctions02/Texturing/CustomRotator
+MRUItem6=/Game/Textures/ConveyorArrow
+MRUItem7=/Game/Assets/dark_gray
+MRUItem8=/Game/Materials/MI_Conveyor
+MRUItem9=/Game/Stations/BP_PlaceableObject
+MRUItem10=/Game/Stations/CBP_PlaceableObject_Conveyor
+MRUItem11=/Game/UI/BP_PlayerUI
+MRUItem12=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem13=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
+MRUItem14=/Game/TopDown/Input/IMC_Default
+MRUItem15=/Game/Goods/BP_Goods
+MRUItem16=/Game/Assets/io_bakedCookies
+MRUItem17=/Game/Assets/io_loadedDough
+MRUItem18=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem19=/Game/Map/MainMap
+MRUItem20=/Game/_Main/Structures/S_Station
+MRUItem21=/Game/TopDown/Input/Actions/IA_LeftMouseClick
+MRUItem22=/Game/Stations/BP_Output
+MRUItem23=/Game/Stations/BP_Intake
+MRUItem24=/Game/Materials/MI_SolidDarkGreen
+MRUItem25=/Game/Materials/MI_SolidRed
+MRUItem26=/Game/Materials/MI_Solid_Start
+MRUItem27=/Game/Materials/MI_Solid_End
+MRUItem28=/Game/Materials/MI_SolidOrange
+MRUItem29=/Game/Materials/MI_SolidYellow
 
 [AssetEditorToolkitTabLocation]
 /Game/CameraPawn.CameraPawn=0
@@ -1803,6 +1828,11 @@ MRUItem25=/Game/Materials/MI_SolidBlack
 /Game/Goods/BP_Goods.BP_Goods=0
 /Game/Stations/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor=0
 /Game/Stations/BP_PlaceableObject.BP_PlaceableObject=0
+/Game/Assets/dark_gray.dark_gray=1
+/Engine/Functions/Engine_MaterialFunctions02/Texturing/CustomRotator.CustomRotator=1
+/Game/Textures/ConveyorArrow.ConveyorArrow=1
+/Game/Assets/conveyer_L.conveyer_L=1
+/Game/Assets/darker_gray.darker_gray=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2948,6 +2978,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -3070,6 +3101,8 @@ MeshInspectorProperties.Options=True
 StaticMesh.Collision=True
 InputAction.Action=False
 Button.Accessibility=False
+Texture2D.Compositing=True
+PreviewMaterial.Material=True
 
 [MaterialEditor]
 PrimType=1
