Fukin wid folders

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1042,6 +1042,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1603,6 +1604,7 @@ MaterialExpressionFunctionOutput.MaterialExpression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1703,12 +1705,10 @@ CBP_PlaceableObject_Conveyor__Straight_C.Physics=True
 CBP_PlaceableObject_Conveyor__Straight_C.Networking=True
 CBP_PlaceableObject_Conveyor__Straight_C.Input=True
 CBP_PlaceableObject_Conveyor__Straight_C.Actor=True
-Texture2D.Interchange =True
 CBP_PlaceableObject_Conveyor__Straight_C.Default=True
 CBP_PlaceableObject_Conveyor__Straight_C.Tick=True
 CBP_PlaceableObject_Conveyor__Straight_C.WorldPartition=True
 CBP_PlaceableObject_Conveyor__Straight_C.Events=True
-UMGEditorProjectSettings.Designer =True
 WorldSettings.LevelInstance=True
 WorldSettings.Cooking=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
@@ -1749,10 +1749,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
-OpenAssetsAtExit=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator.CBP_PlaceableObject_Station_Creator
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight.CBP_PlaceableObject_Conveyor__Straight
-OpenAssetsAtExit=/Game/PlaceableObjects/BP_PlaceableObject.BP_PlaceableObject
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1780,7 +1776,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/
+ContentBrowserTab1.SelectedPaths=/Game/PlaceableObjects
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
