updated conveyor_T to show a split in two separate directions

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -314,7 +314,7 @@ CBP_Station_Baker_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrap
 CBP_Station_Cutter_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 CBP_Station_Packer_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
-MeshNaniteSettings=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
+MeshNaniteSettings=
 SceneComponent=
 BP_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 StaticMeshActor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
@@ -514,7 +514,7 @@ CBP_Station_Cutter_C=
 CBP_Station_Packer_C="\"Object.StationStructure\" "
 MeshMergingSettingsObject="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 AssetViewerSettings="\"Object\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
@@ -1719,6 +1719,8 @@ MaterialExpressionSwitch.MaterialExpression=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1726,7 +1728,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
@@ -1742,13 +1743,14 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
+OpenAssetsAtExit=/Game/Assets/conveyer_T.conveyer_T
+OpenAssetsAtExit=/Game/Materials/M_Conveyor.M_Conveyor
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1776,7 +1778,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/PlaceableObjects
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1848,29 +1850,29 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/PlaceableObjects/BP_Output
-MRUItem1=/Game/Materials/MI_Conveyor_BottomToTop
-MRUItem2=/Game/Materials/MI_Conveyor_RightToLeft
-MRUItem3=/Game/Materials/MI_Conveyor_TopToBottom
-MRUItem4=/Game/Materials/MI_Conveyor_LeftToRight
-MRUItem5=/Game/Materials/M_Solid
-MRUItem6=/Game/_Main/Enums/E_ConveyorMaterialDirection
-MRUItem7=/Game/Materials/M_Conveyor
-MRUItem8=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem9=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
-MRUItem10=/Game/_Main/Enums/E_PlaceableObjectType
-MRUItem11=/Game/PlaceableObjects/BP_PlaceableObject
-MRUItem12=/Game/Materials/MI_SolidShinyBlack
-MRUItem13=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
-MRUItem14=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
-MRUItem15=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
-MRUItem16=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
-MRUItem17=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
-MRUItem18=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
-MRUItem19=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
-MRUItem20=/Game/Textures/RotateArrow
-MRUItem21=/Game/UI/BP_PlayerUI
-MRUItem22=/Game/Assets/conveyer_T
+MRUItem0=/Game/Materials/M_Conveyor
+MRUItem1=/Game/Assets/conveyer_T
+MRUItem2=/Game/PlaceableObjects/BP_Output
+MRUItem3=/Game/Materials/MI_Conveyor_BottomToTop
+MRUItem4=/Game/Materials/MI_Conveyor_RightToLeft
+MRUItem5=/Game/Materials/MI_Conveyor_TopToBottom
+MRUItem6=/Game/Materials/MI_Conveyor_LeftToRight
+MRUItem7=/Game/Materials/M_Solid
+MRUItem8=/Game/_Main/Enums/E_ConveyorMaterialDirection
+MRUItem9=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem10=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
+MRUItem11=/Game/_Main/Enums/E_PlaceableObjectType
+MRUItem12=/Game/PlaceableObjects/BP_PlaceableObject
+MRUItem13=/Game/Materials/MI_SolidShinyBlack
+MRUItem14=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
+MRUItem15=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
+MRUItem16=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
+MRUItem17=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
+MRUItem18=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
+MRUItem19=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
+MRUItem20=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
+MRUItem21=/Game/Textures/RotateArrow
+MRUItem22=/Game/UI/BP_PlayerUI
 MRUItem23=/Game/Assets/conveyer_L
 MRUItem24=/Game/Assets/darker_gray
 MRUItem25=/Game/Assets/conveyer_line
@@ -1971,6 +1973,7 @@ MRUItem29=/Game/Materials/MI_Conveyor
 /Game/Materials/MI_Conveyor_RightToLeft.MI_Conveyor_RightToLeft=1
 /Game/PlaceableObjects/BP_Output.BP_Output=1
 /Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator.CBP_PlaceableObject_Station_Creator=0
+/Game/Assets/conveyer_T.conveyer_T=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2023,7 +2026,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=145.000 Y=524.000
+ScreenPosition=X=387.000 Y=37.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3118,6 +3121,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -3426,7 +3430,7 @@ bEnableOutputLogWordWrap=True
 bEnableOutputLogClearOnPIE=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
