--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1352)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@LAPTOP-2RRNN7L0
 LastExecutedLaunchName=LAPTOP-2RRNN7L0
 LastExecutedPIEPreviewDevice=
@@ -391,7 +391,7 @@ LastLevel=/Game/Map/MainMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -1164,6 +1164,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1851,7 +1852,6 @@ SplineComponent.ComponentReplication=True
 SplineComponent.Activation=True
 SplineComponent.Cooking=True
 SplineComponent.Events=True
-UMGEditorProjectSettings.Designer =True
 Engine.PerQualityLevelProperty=True
 InputSettings.MouseProperties=True
 RecastNavMesh.LevelInstance=True
@@ -2130,6 +2130,7 @@ BoxComponent.Events=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -2141,7 +2142,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -2160,14 +2160,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight.CBP_PlaceableObject_Conveyor__Straight
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn.CBP_PlaceableObject_Conveyor__Turn
-OpenAssetsAtExit=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
-OpenAssetsAtExit=/Game/PlaceableObjects/BP_PlaceableObject.BP_PlaceableObject
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch.CBP_PlaceableObject_Conveyor__Branch
-OpenAssetsAtExit=/Game/Goods/BP_Goods.BP_Goods
-OpenAssetsAtExit=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator.CBP_PlaceableObject_Station_Creator
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2195,7 +2187,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Assets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2267,18 +2259,18 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MI_Conveyor_BottomToTop
-MRUItem1=/Game/Materials/MI_Conveyor_RightToLeft
-MRUItem2=/Game/Materials/MI_Conveyor_TopToBottom
-MRUItem3=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
-MRUItem4=/Game/Goods/BP_Goods
-MRUItem5=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
-MRUItem6=/Game/PlaceableObjects/BP_PlaceableObject
-MRUItem7=/Game/UI/BP_PlayerUI
-MRUItem8=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
-MRUItem9=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
-MRUItem10=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
-MRUItem11=/Game/Assets/conveyer_T
+MRUItem0=/Game/Assets/conveyer_T
+MRUItem1=/Game/Materials/MI_Conveyor_BottomToTop
+MRUItem2=/Game/Materials/MI_Conveyor_RightToLeft
+MRUItem3=/Game/Materials/MI_Conveyor_TopToBottom
+MRUItem4=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
+MRUItem5=/Game/Goods/BP_Goods
+MRUItem6=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
+MRUItem7=/Game/PlaceableObjects/BP_PlaceableObject
+MRUItem8=/Game/UI/BP_PlayerUI
+MRUItem9=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
+MRUItem10=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
+MRUItem11=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
 MRUItem12=/Game/Materials/M_Conveyor
 MRUItem13=/Game/PlaceableObjects/BP_Output
 MRUItem14=/Game/Materials/MI_Conveyor_LeftToRight
