--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1164,6 +1164,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1851,7 +1852,6 @@ SplineComponent.ComponentReplication=True
 SplineComponent.Activation=True
 SplineComponent.Cooking=True
 SplineComponent.Events=True
-UMGEditorProjectSettings.Designer =True
 Engine.PerQualityLevelProperty=True
 InputSettings.MouseProperties=True
 RecastNavMesh.LevelInstance=True
@@ -2130,6 +2130,9 @@ BoxComponent.Events=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -2138,9 +2141,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
@@ -2160,14 +2160,9 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight.CBP_PlaceableObject_Conveyor__Straight
 OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn.CBP_PlaceableObject_Conveyor__Turn
 OpenAssetsAtExit=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
-OpenAssetsAtExit=/Game/PlaceableObjects/BP_PlaceableObject.BP_PlaceableObject
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch.CBP_PlaceableObject_Conveyor__Branch
-OpenAssetsAtExit=/Game/Goods/BP_Goods.BP_Goods
-OpenAssetsAtExit=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator.CBP_PlaceableObject_Station_Creator
+OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight.CBP_PlaceableObject_Conveyor__Straight
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2195,7 +2190,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/PlaceableObjects/Conveyors
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2267,17 +2262,17 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MI_Conveyor_BottomToTop
-MRUItem1=/Game/Materials/MI_Conveyor_RightToLeft
-MRUItem2=/Game/Materials/MI_Conveyor_TopToBottom
-MRUItem3=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
-MRUItem4=/Game/Goods/BP_Goods
-MRUItem5=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
-MRUItem6=/Game/PlaceableObjects/BP_PlaceableObject
-MRUItem7=/Game/UI/BP_PlayerUI
-MRUItem8=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
-MRUItem9=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
-MRUItem10=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
+MRUItem0=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
+MRUItem1=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
+MRUItem2=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
+MRUItem3=/Game/Materials/MI_Conveyor_BottomToTop
+MRUItem4=/Game/Materials/MI_Conveyor_RightToLeft
+MRUItem5=/Game/Materials/MI_Conveyor_TopToBottom
+MRUItem6=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
+MRUItem7=/Game/Goods/BP_Goods
+MRUItem8=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
+MRUItem9=/Game/PlaceableObjects/BP_PlaceableObject
+MRUItem10=/Game/UI/BP_PlayerUI
 MRUItem11=/Game/Assets/conveyer_T
 MRUItem12=/Game/Materials/M_Conveyor
 MRUItem13=/Game/PlaceableObjects/BP_Output
@@ -3972,14 +3967,14 @@ bEnableOutputLogWordWrap=True
 bEnableOutputLogClearOnPIE=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 bForceCompilationAtStartup=False
-RestoreOpenAssetTabsOnRestart=NeverRestore
+RestoreOpenAssetTabsOnRestart=AlwaysRestore
 bMonitorContentDirectories=True
 AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
