Conveyor System Done

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -319,7 +319,7 @@ MeshNaniteSettings=
 SceneComponent=
 BP_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 StaticMeshActor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
-BP_PlaceableObject_C=
+BP_PlaceableObject_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 CBP_PlaceableObject_Conveyor__Branch_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 CBP_PlaceableObject_Conveyor__Turn_C=
 CBP_PlaceableObject_Station_Creator_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
@@ -2131,19 +2131,21 @@ BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
 K2Node_BreakStruct.PinOptions=True
+BP_Goods_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -2164,12 +2166,10 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
 OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch.CBP_PlaceableObject_Conveyor__Branch
-OpenAssetsAtExit=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight.CBP_PlaceableObject_Conveyor__Straight
+OpenAssetsAtExit=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor
 OpenAssetsAtExit=/Game/Goods/BP_Goods.BP_Goods
+OpenAssetsAtExit=/Game/PlaceableObjects/BP_PlaceableObject.BP_PlaceableObject
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2197,7 +2197,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Main/Structures
+ContentBrowserTab1.SelectedPaths=/Game/Assets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2269,36 +2269,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Main/Structures/S_ConveyorData
-MRUItem1=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
-MRUItem2=/Game/PlaceableObjects/BP_PlaceableObject
-MRUItem3=/Game/_Main/Enums/E_GoodsStatus
-MRUItem4=/Game/Goods/BP_Goods
-MRUItem5=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
-MRUItem6=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
-MRUItem7=/Game/UI/BP_PlayerUI
-MRUItem8=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
-MRUItem9=/Game/Assets/conveyer_T
-MRUItem10=/Game/Materials/MI_Conveyor_BottomToTop
-MRUItem11=/Game/Materials/MI_Conveyor_RightToLeft
-MRUItem12=/Game/Materials/MI_Conveyor_TopToBottom
-MRUItem13=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
-MRUItem14=/Game/Materials/M_Conveyor
-MRUItem15=/Game/PlaceableObjects/BP_Output
-MRUItem16=/Game/Materials/MI_Conveyor_LeftToRight
-MRUItem17=/Game/Materials/M_Solid
-MRUItem18=/Game/_Main/Enums/E_ConveyorMaterialDirection
-MRUItem19=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem20=/Game/_Main/Enums/E_PlaceableObjectType
-MRUItem21=/Game/Materials/MI_SolidShinyBlack
-MRUItem22=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
-MRUItem23=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
-MRUItem24=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
-MRUItem25=/Game/Textures/RotateArrow
-MRUItem26=/Game/Assets/conveyer_L
-MRUItem27=/Game/Assets/darker_gray
-MRUItem28=/Game/Assets/conveyer_line
-MRUItem29=/Engine/Functions/Engine_MaterialFunctions02/Texturing/CustomRotator
+MRUItem0=/Game/PlaceableObjects/BP_PlaceableObject
+MRUItem1=/Game/Assets/io_ingredients
+MRUItem2=/Game/Goods/BP_Goods
+MRUItem3=/Game/PlaceableObjects/CBP_PlaceableObject_Conveyor
+MRUItem4=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Branch
+MRUItem5=/Game/_Main/Structures/S_ConveyorData
+MRUItem6=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Creator
+MRUItem7=/Game/_Main/Enums/E_GoodsStatus
+MRUItem8=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Straight
+MRUItem9=/Game/UI/BP_PlayerUI
+MRUItem10=/Game/Assets/conveyer_T
+MRUItem11=/Game/Materials/MI_Conveyor_BottomToTop
+MRUItem12=/Game/Materials/MI_Conveyor_RightToLeft
+MRUItem13=/Game/Materials/MI_Conveyor_TopToBottom
+MRUItem14=/Game/PlaceableObjects/Conveyors/CBP_PlaceableObject_Conveyor__Turn
+MRUItem15=/Game/Materials/M_Conveyor
+MRUItem16=/Game/PlaceableObjects/BP_Output
+MRUItem17=/Game/Materials/MI_Conveyor_LeftToRight
+MRUItem18=/Game/Materials/M_Solid
+MRUItem19=/Game/_Main/Enums/E_ConveyorMaterialDirection
+MRUItem20=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem21=/Game/_Main/Enums/E_PlaceableObjectType
+MRUItem22=/Game/Materials/MI_SolidShinyBlack
+MRUItem23=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
+MRUItem24=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
+MRUItem25=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
+MRUItem26=/Game/Textures/RotateArrow
+MRUItem27=/Game/Assets/conveyer_L
+MRUItem28=/Game/Assets/darker_gray
+MRUItem29=/Game/Assets/conveyer_line
 
 [AssetEditorToolkitTabLocation]
 /Game/CameraPawn.CameraPawn=0
@@ -2396,6 +2396,7 @@ MRUItem29=/Engine/Functions/Engine_MaterialFunctions02/Texturing/CustomRotator
 /Game/PlaceableObjects/CBP_PlaceableObject_Conveyor.CBP_PlaceableObject_Conveyor=0
 /Game/_Main/Enums/E_GoodsStatus.E_GoodsStatus=1
 /Game/_Main/Structures/S_ConveyorData.S_ConveyorData=1
+/Game/Assets/io_ingredients.io_ingredients=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3976,7 +3977,7 @@ bEnableOutputLogWordWrap=True
 bEnableOutputLogClearOnPIE=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
